@@ -282,6 +282,7 @@ lib/symbolic/Makefile
 lib/commutative_algebra/Makefile
 ve/Makefile
 gtkextra/Makefile
+tutors/Makefile
 pixmaps/Makefile
 pixmaps/32x32/Makefile
 pixmaps/48x48/Makefile
