@@ -1,0 +1,6 @@
+tutordir = \
+	$(datadir)/genius/tutors/
+tutor_DATA = \
+	strange-attractor.gel
+EXTRA_DIST = \
+	$(tutor_DATA)
