@@ -1,3 +1,11 @@
+Fri Sep 05 01:52:10 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* tutors/*: add a simple strange-attractor tutorial
+
+	* src/tutors.[ch], src/gnome-genius.c: add a tutorials menu
+	  to load same programs, Right now really simple, eventually should
+	  have submenus, and have to figure out translation
+
 Tue Sep 02 10:12:42 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml: minor fixes
